tdf#91240 - cope with state-change after dispose and dispose fixedtext.

Change-Id: Iba204fbeebbc4ea0982036159507b755cedd544e