extensions/source/propctrlr/browserpage.cxx
@@ -19,19 +19,12 @@
 
 #include "browserpage.hxx"
 
-
 namespace pcr
 {
-
-
     #define LAYOUT_BORDER_LEFT      3
     #define LAYOUT_BORDER_TOP       3
     #define LAYOUT_BORDER_RIGHT     3
     #define LAYOUT_BORDER_BOTTOM    3
-
-
-    // class OBrowserPage
-
 
     OBrowserPage::OBrowserPage(vcl::Window* pParent,WinBits nWinStyle)
             :TabPage(pParent,nWinStyle)
@@ -41,7 +34,6 @@ namespace pcr
         m_aListBox->SetPaintTransparent( true );
         m_aListBox->Show();
     }
-
 
     OBrowserPage::~OBrowserPage()
     {
@@ -62,33 +54,23 @@ namespace pcr
         m_aListBox->SetPosSizePixel( Point( LAYOUT_BORDER_LEFT, LAYOUT_BORDER_TOP ), aSize );
     }
 
-
-
-
-
-
     void OBrowserPage::StateChanged(StateChangedType nType)
     {
         Window::StateChanged( nType);
-        if (StateChangedType::Visible == nType)
+        if (StateChangedType::Visible == nType && m_aListBox)
             m_aListBox->ActivateListBox(IsVisible());
     }
-
 
     sal_Int32 OBrowserPage::getMinimumWidth()
     {
         return m_aListBox->GetMinimumWidth() + LAYOUT_BORDER_LEFT + LAYOUT_BORDER_RIGHT;
     }
 
-
     sal_Int32 OBrowserPage::getMinimumHeight()
     {
         return m_aListBox->GetMinimumHeight() + LAYOUT_BORDER_TOP + LAYOUT_BORDER_BOTTOM;
     }
 
-
 } // namespace pcr
-
-
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
